--- a/CQPdemo/CQPDemo.vcxproj.filters
+++ b/CQPdemo/CQPDemo.vcxproj.filters
@@ -54,6 +54,6 @@
     <Library Include="CQP.lib" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="com.example.democ.json" />
+    <None Include="cn.sonui.seekmsg.json" />
   </ItemGroup>
 </Project>
